# dflash_npu

./: LICENSE  README.md  pyproject.toml  test_kv_cache_analysis.py  test_npu_basic.py  test_npu_model.py  test_real_model.py
dflash/: __init__.py  benchmark.py  device.py  model.py  model_mlx.py  model_npu.py
